@@ -25,9 +25,18 @@
 	</NfoUrl>
 	<CreateSearchUrl dest="3" clearbuffers="no">
 		<RegExp input="$INFO[searchservice]" output="$$17" dest="3">
-			<RegExp input="$$1" output="&lt;url&gt;http://api.tmdb.org/3/search/movie?api_key=6a5be4999abf74eba1f9a8311294c267&amp;amp;query=\1&amp;amp;year=$$4&lt;/url&gt;" dest="17">
+			<RegExp input="$$7" output="&lt;url&gt;http://api.tmdb.org/3/search/movie?api_key=6a5be4999abf74eba1f9a8311294c267&amp;amp;query=\1&amp;amp;year=$$4&lt;/url&gt;" dest="17">
 				<RegExp input="$$2" output="\1" dest="4">
 					<expression clear="yes">(.+)</expression>
+				</RegExp>
+				<RegExp input="$$1" output="\1" dest="7">
+					<expression clear="yes">(.+)</expression>
+				</RegExp>
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression noclean="1">(.+)(?:%20the$|%20an$|%20a$|%2Cthe$|%2Can$|%2Ca$)</expression>
+				</RegExp>
+				<RegExp input="$$6" output="\1" dest="7">
+					<expression>(.+)</expression>
 				</RegExp>
 				<expression noclean="1" />
 			</RegExp>
