@@ -1,3 +1,6 @@
+[B]4.1.15[/B]
+- improved: search results to handle articles at the end of title
+
 [B]4.1.14[/B]
 - fixed: search results for real
 
